exercise1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foxy
  namespace: foxy
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: foxy
      port:
        number: 80
  rules:
  - host: "foxy.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foxy
            port:
              number: 80
